# aws-custodian

./: .eslintrc.json  .gitignore  .nyx.yml  .prettierignore  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.MD  README.md  docker-compose.yml  git-conventional-commits.yaml  jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  tarpaulin.toml  tsconfig.json  types.d.ts
.github/workflows/: backend_qa.yml  frontend_qa.yml  pre_release.yml
.husky/: pre-push
docker/: docker-compose.yml  init-aws.py  init-aws.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  credentials.rs  lib.rs  main.rs  parameters.rs  profile.rs
src-tauri/src/common/: aws.rs  report.rs  secure_string.rs  test.rs
src-tauri/src/core/: configuration.rs  profile.rs
src-tauri/src/core/configuration/: api.rs  domain.rs  error.rs  spi.rs
src-tauri/src/core/profile/: api.rs  domain.rs  error.rs  spi.rs
src-tauri/src/credentials/: core.rs
src-tauri/src/credentials/application/: tauri.rs
src-tauri/src/credentials/application/tauri/: credentials_handler.rs
src-tauri/src/credentials/core/: api.rs  credentials_service.rs  error.rs  spi.rs
src-tauri/src/credentials/infrastructure/aws/: sts.rs
src-tauri/src/credentials/infrastructure/aws/sts/: sts_adapter.rs
src-tauri/src/infrastructure/aws/: sdk_config.rs
src-tauri/src/infrastructure/aws/sdk_config/: configuration_adapter.rs
src-tauri/src/infrastructure/aws/ssm/: parameter_store_adapter.rs
src-tauri/src/parameters/: core.rs
src-tauri/src/parameters/application/: tauri.rs
src-tauri/src/parameters/application/tauri/: parameters_handler.rs
src-tauri/src/parameters/core/: api.rs  domain.rs  error.rs  parameter_service.rs  spi.rs
src-tauri/src/parameters/infrastructure/: aws.rs
src-tauri/src/parameters/infrastructure/aws/: ssm.rs
src-tauri/src/parameters/infrastructure/aws/ssm/: parameter_store_adapter.rs
src-tauri/src/profile/: core.rs
src-tauri/src/profile/application/: tauri.rs
src-tauri/src/profile/application/tauri/: profile_handler.rs
src-tauri/src/profile/core/: api.rs  domain.rs  error.rs  profile_service.rs  spi.rs
src-tauri/src/profile/infrastructure/: aws.rs
src-tauri/src/profile/infrastructure/aws/: sdk_config.rs
src-tauri/src/profile/infrastructure/aws/sdk_config/: configuration_adapter.rs  profile_file_adapter.rs  sdk_config_adapter.rs
src-tauri/src/profiles/application/: tauri.rs
src-tauri/src/profiles/application/tauri/: profile_handler.rs
src-tauri/src/profiles/core/: api.rs  domain.rs  error.rs  profile_service.rs  spi.rs
src-tauri/src/profiles/infrastructure/: aws.rs
src-tauri/src/profiles/infrastructure/aws/sdk_config/: sdk_config_adapter.rs
src-tauri/tests/: configuration_adapter_test.rs  parameter_store_adapter_test.rs  profile_file_adapter_test.rs  sdk_config_adapter_test.rs  sts_adapter_test.rs
src/app/: layout.tsx  page.test.tsx  page.tsx
src/app/parameters/: error.tsx  page.tsx
src/app/profiles/: page.test.tsx  page.tsx
src/components/: SidebarMenu.test.tsx  SidebarMenu.tsx  breadcrumb.test.tsx  breadcrumb.tsx  data-table-actions-button.tsx
src/components/__snapshots__/: SidebarMenu.test.tsx.snap
src/components/ui/: alert-dialog.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  checkbox.tsx  command.tsx  data-table-column-header.tsx  data-table-faceted-filter.tsx  data-table-pagination.tsx  data-table-toolbar.tsx  data-table.tsx  (+14 more)
src/context/: di-context.tsx
src/hooks/: Navigation.test.tsx  Navigation.tsx  use-profile-set.ts
src/lib/: utils.ts
src/stores/: use-current-profile-store.tsx  use-sidebar-store.tsx
(+49 files in other folders)
