[package]
name = "backend"
version = "0.1.0"
description = "A Rust-powered backend for a Tauri Desktop application, providing functionalities for AWS SDK calls."
authors = ["Maik Basel"]
license = "MIT"
repository = "https://github.com/maikbasel/archunit-hex-arch.git"
default-run = "backend"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
error-stack = "0.4.1"
lazy_static = "1.4.0"
regex = "1.9.3"
aws-config = "0.56.1"
async-trait = "0.1.74"
derivative = "2.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
secstr = "0.5.1"
heck = "0.4.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dev-dependencies]
rstest = "0.18.2"
fake = { version = "2.8", features = ["derive"] }
spectral = "0.6.0"
tempfile = "3.8.1"
test-context = "0.1.4"
rust-ini = "0.20.0"
tokio = { version = "1.15.0", features = ["full"] }
mockall = "0.11.4"
serial_test = "2.0.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
